RESOLVED FIXED168815
REGRESSION (r211305): Masks on composited elements with preserve-3d broken
https://bugs.webkit.org/show_bug.cgi?id=168815
Summary REGRESSION (r211305): Masks on composited elements with preserve-3d broken
Simon Fraser (smfr)
Reported 2017-02-23 18:35:41 PST
REGRESSION (r211305): Masks on composited elements with preserve-3d broken
Attachments
Patch (4.60 KB, patch)
2017-02-23 18:39 PST, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2017-02-23 18:39:54 PST
WebKit Commit Bot
Comment 2 2017-02-23 21:35:29 PST
Comment on attachment 302627 [details] Patch Clearing flags on attachment: 302627 Committed r212941: <http://trac.webkit.org/changeset/212941>
WebKit Commit Bot
Comment 3 2017-02-23 21:35:32 PST
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 4 2017-02-23 22:08:42 PST
Note You need to log in before you can comment on or make changes to this bug.