REGRESSION (r211305): Masks on composited elements with preserve-3d broken https://bugs.webkit.org/show_bug.cgi?id=168815 rdar://problem/30676846

Reviewed by Jon Lee.

Source/WebCore:

r211305 moved the mask layer to be on the structural layer if there is one, to fix
masking backdrops. However, with preserve-3d the structural layer can be a CATransformLayer,
which doesn't take a mask, so limit the previous change to backdrops only.

Test: compositing/masks/mask-with-preserve-3d.html

* platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::updateMaskLayer):

LayoutTests:

* compositing/masks/mask-with-preserve-3d-expected.html: Added.
* compositing/masks/mask-with-preserve-3d.html: Added.


Canonical link: https://commits.webkit.org/185813@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212941 268f45cc-cd09-0410-ab3c-d52691b4dbfc